# minisim

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  RELEASING.md  codecov.yml  pyproject.toml
.github/workflows/: docs-preview.yml  lint.yml  lock-update.yml  publish.yml  testandcov.yml
docs/: Makefile  concepts.md  conf.py  index.md  make.bat  quickstart.md
docs/howto/: benchmark.md  build_recording.md  examples.md  index.md  populations.md  sweep.md  use_in_test_suite.md  video.md
docs/reference/: caching.md  index.md  metrics.md  presets.md  recording.md  scene.md  simulate.md  spec.md  stability.md  testing.md
docs/tutorials/: index.md
minisim/: __init__.py  cache.py  footprint.py  metrics.py  perf.py  presets.py  recording.py  scene.py  simulate.py  spec.py  sweep.py  testing.py  video.py
minisim/notebooks/: __init__.py  _support.py
minisim/notebooks/studio/build_recording/: _studio_config.py  _studio_panels.py
minisim/notebooks/training/01_anatomy/: 01_anatomy.ipynb  README.md  _anatomy_panels.py
minisim/notebooks/training/02_demixing/: 02_demixing.ipynb
minisim/notebooks/training/03_metrics/: 03_metrics.ipynb
minisim/steps/: __init__.py  base.py  cell.py  motion.py  sensor.py  tissue.py
minisim/test/: test_caching.py  test_footprint.py  test_metrics.py  test_notebooks.py  test_perf.py  test_presets.py  test_recording.py  test_reproducibility.py  test_scene.py  test_simulate.py  test_spec.py  test_steps.py  test_structural.py  test_sweep.py  test_testing.py  test_video.py
scripts/: gen_example_figs.py  gen_overlap_focus_grid.py  make_logo.py
